--- a/src/SayAndDo/TaskBundle/Resources/views/Default/index.html.twig
+++ b/src/SayAndDo/TaskBundle/Resources/views/Default/index.html.twig
@@ -1,46 +1,90 @@
-{{ form_start(form, {'attr':{'class': 'form-horizontal'} }) }}
-            {{ form_errors(form) }}
+{% extends '::fullwidth.html.twig' %}
 
-            {#<form id="" action="assets/img/joker.png" enctype="multipart/form-data" class="form-inline">#}
 
-<div class="form-group">
-    <div class="col-xs-12">
-        {{ form_widget(form.title, {'attr': {'class': 'required fr_input_txt fr_97_5pro popupInput form-control', 'placeholder': 'Politikas'} }) }}
-        {{ form_errors(form.title) }}
+{% block breadcrumb %}
+    <li>Profilio apžvalga</li>
+{% endblock %}
+
+{% block header_title %}
+    Profilio apžvalga
+{% endblock %}
+
+{% block inner_content %}
+
+    {{ form_start(form, {'attr':{'class': 'form-horizontal'} }) }}
+
+    {{ form_errors(form) }}
+    <section class="section1">
+        <div class="container clearfix">
+            <div class="content pull-right col-lg-8 col-md-8 col-sm-8 col-xs-12 clearfix">
+
+                <!-- SLIDE POST -->
+                <article class="blog-wrap text-center">
+                    <h4 class="title">
+                        <span>Pažado įrodymas</span>
+                    </h4>
+                    <div class="container clearfix">
+                        <input name="promise" id="promise" class="form-control" placeholder="Internetinis adresas" type="text">
+                        <a id="get-promise" class="btn btn-info btn-sm pull-right">Atidaryti</a>
+                    </div>
+                    <div id="result" style="width: 100%; height: 260px; background-color: #D0D0D0; text-align: left; padding: 5px;">
+                        Įveskite internetinį adresą
+                    </div><!-- end carousel -->
+                </article>
+
+                <hr>
+
+            </div>
+
+            <!-- BEGIN SIDEBAR -->
+            <div id="sidebar" class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="margin-top: 25px;">
+
+                <div class="widget text-center">
+                    <h4 class="title">
+                        <span>Pažadas</span>
+                    </h4>
+                    <form id="subscribe" action="mc.php" name="subscribe" method="post">
+                        {{ form_widget(form.title, {'attr': {'class': 'required fr_input_txt fr_97_5pro popupInput form-control', 'placeholder': 'Politikas'} }) }}
+                        {{ form_errors(form.title) }}
+                        {{ form_widget(form.description, {'attr': {'class': 'required fr_input_txt fr_97_5pro partial_address form-control', 'placeholder': 'Pažado aprašymas'} }) }}
+                        {{ form_errors(form.description) }}
+                        <div class="pull-right">
+                            <input type="submit" value="Išsaugoti" id="submit" class="button">
+                        </div>
+                    </form>
+                </div>
+
+            </div><!-- end sidebar -->
+        </div><!-- end container -->
+    </section><!-- end section -->
+    {{ form_end(form) }}
+
+    <div id="result" style="width: 400px;">
     </div>
-</div>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="http://assets.annotateit.org/annotator/v1.1.0/annotator-full.min.js"></script>
+    <link rel="stylesheet" href="http://assets.annotateit.org/annotator/v1.1.0/annotator.min.css">
 
-<div class="form-group">
-    <div class="col-xs-12">
-        {{ form_widget(form.description, {'attr': {'class': 'required fr_input_txt fr_97_5pro partial_address form-control', 'placeholder': 'Pažado aprašymas'} }) }}
-        {{ form_errors(form.description) }}
-    </div>
-</div>
+    <script type="application/javascript">
+    var $j = jQuery.noConflict();
+    $j( document ).ready(function() {
 
-
-{{ form_end(form) }}
-
-<div id="result"></div>
-<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script type="application/javascript">
-    $( document ).ready(function() {
-        $("#get-promise").on("click", function (event) {
-            $.ajax({
-                url: "/task/success/",
+        $j("#get-promise").on("click", function (event) {
+            $j.ajax({
+                url: "/task/extract/",
+                type: "POST",
                 data: {
                 },
                 success: function (result) {
-                    $("#result").html("<strong>" + result + "</strong>");
+                    $j("#result").html("<strong>" + result + "</strong>")
+                        .annotator()
+                        .annotator('addPlugin', 'Tags');
                 }
             });
         });
     });
 
+    </script>
 
-//    $("#get-promise").click(function(){
-//        $("#result").load("/task/success/");
-//    });
-</script>
-<input type="text" placeholder="Pažado nuoroda" class="required " required="required" name="form[url]" id="form_url">
-<button id="get-promise">Atidaryti</button>
+{% endblock  %}
