--- a/src/SayAndDo/ProfileBundle/Resources/views/Profile/details.html.twig
+++ b/src/SayAndDo/ProfileBundle/Resources/views/Profile/details.html.twig
@@ -3,8 +3,8 @@
 {% set total_tasks = (tasks_confirmed|length + tasks_in_progress|length + tasks_done|length) %}
 
 {% block breadcrumb %}
-    <li>Profilio apžvalga</li>
-    <li><a href="{{ path('say_and_do_profile_details', {'id':profile.getId()}) }}">{{ profile.getTitle() }}</a></li>
+    <li><a href="{{ path('say_and_do_profile_profiles') }}">Profiliai</a></li>
+    <li>{{ profile.getTitle() }}</li>
 {% endblock %}
 
 {% block header_title %}
