--- a/src/SayAndDo/ProfileBundle/Resources/views/Profile/details.html.twig
+++ b/src/SayAndDo/ProfileBundle/Resources/views/Profile/details.html.twig
@@ -2,6 +2,10 @@
 
 {% set total_tasks = (tasks_confirmed|length + tasks_in_progress|length + tasks_done|length) %}
 
+{% if total_tasks <= 0 %}
+    {% set total_tasks = 1 %}
+{% endif %}
+
 {% block breadcrumb %}
     <li><a href="{{ path('say_and_do_profile_profiles') }}">Profiliai</a></li>
     <li>{{ profile.getTitle() }}</li>
@@ -14,7 +18,7 @@
 {% block inner_content %}
     <div class="author_box clearfix">
         <div class="col-lg-10 first">
-            <img class="img-circle alignleft" width="100" src="{{ asset('demos/team_02.png') }}" alt="">
+            <img class="img-circle alignleft" width="100" src="{{ asset('profiles/profile_'~profile.getId()~'.png') }}" alt="">
             <h4>{{ profile.getTitle() }} - {{ profile.getPosition() }} <small>{{ profile.getPoliticalParty() }}</small></h4>
             <p>{{ profile.getDescription() }}</p>
             <div class="social_buttons">
