Updated main menu

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -65,55 +65,8 @@
                 <div id="nav" class="right">
                     <div class="container clearfix">
                         <ul id="jetmenu" class="jetmenu blue">
-                            <li><a href="#">Home</a>
-                                <ul class="dropdown">
-                                    <li><a href="index.html">Home - Shop Version</a></li>
-                                    <li><a href="index2.html">Home - Agency Version</a></li>
-                                    <li><a href="index3.html">Home - Business Version</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="about.html">About Us</a></li>
-                                    <li><a href="services.html">Services</a></li>
-                                    <li><a href="team-members.html">Team Members</a></li>
-                                    <li><a href="testimonials.html">Testimonials</a></li>
-                                    <li><a href="404.html">404 Error</a></li>
-                                    <li><a href="faq.html">FAQ Page</a></li>
-                                    <li><a href="left-sidebar.html">Left Sidebar</a></li>
-                                    <li><a href="right-sidebar.html">Right Sidebar</a></li>
-                                    <li><a href="fullwidth.html">Full Width</a></li>
-                                    <li><a href="login.html">Login</a></li>
-                                    <li><a href="register.html">Register</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Shop</a>
-                                <ul class="dropdown">
-                                    <li><a href="digital-download.html">Products Page</a></li>
-                                    <li><a href="single-product.html">Single Product</a></li>
-                                    <li><a href="checkout.html">Checkout</a></li>
-                                    <li><a href="account.html">Account Page</a></li>
-                                    <li><a href="support.html">Support Center</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Portfolio</a>
-                                <ul class="dropdown">
-                                    <li><a href="single-portfolio-1.html">Single Portfolio 1</a></li>
-                                    <li><a href="single-portfolio-2.html">Single Portfolio 2</a></li>
-                                    <li><a href="portfolio-2.html">Portfolio (2 Columns)</a></li>
-                                    <li><a href="portfolio-3.html">Portfolio (3 Columns)</a></li>
-                                    <li><a href="gallery-portfolio.html">Gallery</a></li>
-                                    <li><a href="masonry-grid-portfolio.html">Masonry Grid Style</a></li>
-                                </ul>
-                            </li>
-                            <li class="active"><a href="#">Blog</a>
-                                <ul class="dropdown">
-                                    <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
-                                    <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
-                                    <li><a href="single-with-sidebar.html">Single with Sidebar</a></li>
-                                </ul>
-                            </li>
+                            <li><a href="#">Pagrindinis</a></li>
+                            <li{% if app.request.get('_route') == 'say_and_do_profile_profiles' or app.request.get('_route') == 'say_and_do_profile_details' %} class="active"{% endif %}><a href="{{ path('say_and_do_profile_profiles') }}">Profiliai</a></li>
                         </ul>
                     </div>
                 </div><!-- nav -->
