--- a/src/SayAndDo/ProfileBundle/Resources/views/Homepage/homepage.html.twig
+++ b/src/SayAndDo/ProfileBundle/Resources/views/Homepage/homepage.html.twig
@@ -11,4 +11,56 @@
             <a class="dmbutton large" href="contact.html">MINIM VEDIAM</a>
         </div>
     </section>
+    <div class="content col-lg-12 col-md-12 col-sm-12 clearfix">
+        {% for profile in profiles %}
+            {% set total_tasks = (profile.tasks_confirmed|length + profile.tasks_in_progress|length + profile.tasks_done|length) %}
+            {% if total_tasks <= 0 %}
+                {% set total_tasks = 1 %}
+            {% endif %}
+
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <div class="teammembers">
+                    <div class="he-wrap tpl2">
+                        <img src="demos/team_01.png" alt="">
+
+                        <div class="he-view">
+                            <div class="bg a0" data-animate="fadeIn">
+                                <div class="center-bar">
+                                    <a href="#" class="twitter a0" data-animate="elasticInDown"></a>
+                                    <a href="#" class="facebook a1" data-animate="elasticInDown"></a>
+                                    <a href="#" class="google a2" data-animate="elasticInDown"></a>
+                                </div>
+                                <!-- center  bar -->
+                            </div>
+                        </div>
+                    </div>
+                    <!-- he wrap -->
+                    <div class="teammembers-meta">
+                        <h4>{{ profile.profile.title }}</h4>
+                    </div>
+                    <p>{{ profile.profile.description }}</p>
+                    <small>{{ profile.profile.position }}</small>
+                    <div class="teamskills">
+                        <div class="progress">
+                            <div data-effect="slide-left" class="progress-bar progress-bar-danger effect-slide-left"
+                                 style="width: {{ ((profile.tasks_confirmed|length / total_tasks) * 100) }}%; -webkit-transition: all 0.7s ease-in-out; transition: all 0.7s ease-in-out;">
+                                <span>confirmed</span></div>
+                        </div>
+                        <div class="progress">
+                            <div data-effect="slide-left" class="progress-bar progress-bar-danger effect-slide-left"
+                                 style="width: {{ ((profile.tasks_done|length / total_tasks) * 100) }}%; -webkit-transition: all 0.7s ease-in-out; transition: all 0.7s ease-in-out;">
+                                <span>done</span></div>
+                        </div>
+                        <div class="progress">
+                            <div data-effect="slide-left" class="progress-bar progress-bar-danger effect-slide-left"
+                                 style="width: {{ ((profile.tasks_in_progress|length / total_tasks) * 100) }}%; -webkit-transition: all 0.7s ease-in-out; transition: all 0.7s ease-in-out;">
+                                <span>in progress</span></div>
+                        </div>
+                    </div>
+                </div>
+                <!-- end teammembers -->
+            </div>
+            <!-- end col 4 -->
+        {% endfor %}
+    </div>
 {% endblock %}
