--- a/src/SayAndDo/ProfileBundle/Resources/views/Homepage/homepage.html.twig
+++ b/src/SayAndDo/ProfileBundle/Resources/views/Homepage/homepage.html.twig
@@ -44,17 +44,17 @@
                         <div class="progress">
                             <div data-effect="slide-left" class="progress-bar progress-bar-danger effect-slide-left"
                                  style="width: {{ ((profile.tasks_confirmed|length / total_tasks) * 100) }}%; -webkit-transition: all 0.7s ease-in-out; transition: all 0.7s ease-in-out;">
-                                <span>confirmed</span></div>
+                                <span>Darbai</span></div>
                         </div>
                         <div class="progress">
                             <div data-effect="slide-left" class="progress-bar progress-bar-danger effect-slide-left"
                                  style="width: {{ ((profile.tasks_done|length / total_tasks) * 100) }}%; -webkit-transition: all 0.7s ease-in-out; transition: all 0.7s ease-in-out;">
-                                <span>done</span></div>
+                                <span>Atlikta</span></div>
                         </div>
                         <div class="progress">
                             <div data-effect="slide-left" class="progress-bar progress-bar-danger effect-slide-left"
                                  style="width: {{ ((profile.tasks_in_progress|length / total_tasks) * 100) }}%; -webkit-transition: all 0.7s ease-in-out; transition: all 0.7s ease-in-out;">
-                                <span>in progress</span></div>
+                                <span>Vykdoma</span></div>
                         </div>
                     </div>
                 </div>
