Clear up ES queries page

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -105,6 +105,7 @@
 
 {% block content %}{% endblock %}
 
+{% block footer %}
 <footer class="footer">
     <div class="container">
         <div class="widget col-lg-3 col-md-3 col-sm-12">
@@ -172,6 +173,7 @@
         </div><!-- end container -->
     </div><!-- end copyrights -->
 </footer><!-- end footer -->
+{% endblock %}
 <div class="dmtop">Scroll to Top</div>
 
 <!-- Main Scripts-->
