Added profile photo in main page

--- a/src/SayAndDo/ProfileBundle/Resources/views/Homepage/homepage.html.twig
+++ b/src/SayAndDo/ProfileBundle/Resources/views/Homepage/homepage.html.twig
@@ -21,7 +21,7 @@
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <div class="teammembers">
                     <div class="he-wrap tpl2">
-                        <img src="demos/team_01.png" alt="">
+                        <img src="{{ asset('profiles/profile_'~profile.profile.getId()~'.png') }}" alt="">
 
                         <div class="he-view">
                             <div class="bg a0" data-animate="fadeIn">
