Added header title

--- a/src/SayAndDo/ProfileBundle/Resources/views/Homepage/homepage.html.twig
+++ b/src/SayAndDo/ProfileBundle/Resources/views/Homepage/homepage.html.twig
@@ -1,5 +1,9 @@
 {% extends '::fullwidth.html.twig' %}
 
+{% block header_title %}
+    Pagrindinis
+{% endblock %}
+
 {% block inner_content %}
     <section class="section2">
         <div class="message text-center">
