--- a/src/SayAndDo/AnalyzisBundle/Resources/views/Default/index.html.twig
+++ b/src/SayAndDo/AnalyzisBundle/Resources/views/Default/index.html.twig
@@ -1,8 +1,12 @@
-{% extends 'base.html.twig' %}
+{% extends '::fullwidth.html.twig' %}
+
+{% block top_menu %}{% endblock %}
+{% block bottom_menu %}{% endblock %}
+{% block footer %}{% endblock %}
 
 {% block content %}
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-offset-1 col-md-10">
             <table class="table table-condensed table-hover">
                 <thead>
                 <tr>
@@ -15,8 +19,10 @@
                     <tr>
                         <td>{{ document.title }}</td>
                         <td>
-                            <a class="btn btn-xs btn-primary" href="{{ path("say_and_do_analyzis_homepage.view", {'id' : document.id}) }}">[view]</a>
-                            <a class="btn btn-xs btn-danger" href="{{ path("say_and_do_analyzis_homepage.remove", {'id' : document.id}) }}">[rm]</a>
+                            <a class="btn btn-xs btn-primary"
+                               href="{{ path("say_and_do_analyzis_homepage.view", {'id' : document.id}) }}">[view]</a>
+                            <a class="btn btn-xs btn-danger"
+                               href="{{ path("say_and_do_analyzis_homepage.remove", {'id' : document.id}) }}">[rm]</a>
                         </td>
                     </tr>
                 {% endfor %}
@@ -24,6 +30,7 @@
             </table>
         </div>
     </div>
+    <hr>
     <div class="row">
         <div class="col-md-offset-3 col-md-6">
             <form role="form" action="{{ path("say_and_do_analyzis_homepage.add") }}" method="post">
@@ -41,6 +48,8 @@
                 </div>
                 <button type="submit" class="btn btn-primary btn-lg btn-block">Pridėti dokumentą</button>
             </form>
+            <br>
+            <br>
         </div>
     </div>
 {% endblock %}
