Changed to OpenSans

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,8 +11,7 @@
 
     {% block stylesheets %}
         <!-- Google Fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Ruda:400,900,700' rel='stylesheet' type='text/css'>
-
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,900,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <!-- Font Awesome -->
         <link rel="stylesheet" href="{{ asset('css/font-awesome.css') }}">
         <!-- Bootstrap -->
