--- a/web/css/style.css
+++ b/web/css/style.css
@@ -25,8 +25,8 @@
 	* { 
 		margin: 0;
 		padding: 0px;
-		font-family: 'Ruda', sans-serif;
-	} 
+        font-family: 'Open Sans', sans-serif;
+    }
 	body { 
 		background: #f8f8f8; 
 		margin: 0; 
@@ -36,14 +36,14 @@
 	}
 	
 	h1, h2, h3, h4, h5, h6 {
-		font-family: 'Ruda', sans-serif;
+        font-family: 'Open Sans', sans-serif;
 		font-weight: 700;
 	}
 	
 	p { 
 		padding: 0; 
 		margin-bottom: 12px; 
-		font-family: 'Ruda', sans-serif !important; 
+		font-family: 'Open Sans', sans-serif !important;
 		font-weight: 300;
 		font-size: 14px; 
 		line-height: 24px;
@@ -479,7 +479,7 @@
 		font-size:11px;
 		font-style:italic;
 		color:#798184;
-		font-family: 'Ruda', sans-serif;
+        font-family: 'Open Sans', sans-serif;
 		font-weight:300;
 		list-style: none outside none;
 		margin: 20px 0 0;
@@ -506,7 +506,7 @@
 		height:40px !important;
 		float:left !important;
 		display:inline !important;
-		font-family: 'Ruda', sans-serif !important;
+		font-family: 'Open Sans', sans-serif !important;
 		font-weight:normal !important;
 		font-style:italic !important;		
 		font-size:11px !important;
@@ -974,7 +974,7 @@
 	.item_price h3 span {
 		color: #2B2E31;
 		display: block;
-		font-family: 'Ruda', sans-serif;
+		font-family: 'Open Sans', sans-serif;
 		font-size: 41px;
 		font-weight: 400;
 		margin: 25px 0 0;
@@ -1041,7 +1041,7 @@
 	}
 	.general-title p {
 		color: #696E74;
-		font-family: 'Ruda', sans-serif !important;
+		font-family: 'Open Sans', sans-serif !important;
 		font-size: 18px;
 		font-style: italic;
 		font-weight: 300;
@@ -1358,7 +1358,7 @@
 		font-style:italic;
 		color:#798184;
 		padding:0 10px;
-		font-family: 'Ruda', sans-serif !important;
+		font-family: 'Open Sans', sans-serif !important;
 		font-weight:300;
 	}
 	
@@ -2209,7 +2209,7 @@
 	a.readmore {
 		text-transform:none;
 		display: block;
-		font-family: 'Ruda', sans-serif !important;
+		font-family: 'Open Sans', sans-serif !important;
 		font-size:12px;
 		font-style:italic;
 	}
