--- a/src/SayAndDo/ProfileBundle/Resources/views/Homepage/homepage.html.twig
+++ b/src/SayAndDo/ProfileBundle/Resources/views/Homepage/homepage.html.twig
@@ -46,17 +46,17 @@
                     <div class="teamskills">
                         <div class="progress">
                             <div data-effect="slide-left" class="progress-bar progress-bar-danger effect-slide-left"
-                                 style="width: {{ ((profile.tasks_confirmed|length / total_tasks) * 100) }}%; -webkit-transition: all 0.7s ease-in-out; transition: all 0.7s ease-in-out;">
+                                 style="background-color: #d9534f; width: {{ ((profile.tasks_confirmed|length / total_tasks) * 100) }}%; -webkit-transition: all 0.7s ease-in-out; transition: all 0.7s ease-in-out;">
                                 <span>Darbai</span></div>
                         </div>
                         <div class="progress">
                             <div data-effect="slide-left" class="progress-bar progress-bar-danger effect-slide-left"
-                                 style="width: {{ ((profile.tasks_done|length / total_tasks) * 100) }}%; -webkit-transition: all 0.7s ease-in-out; transition: all 0.7s ease-in-out;">
+                                 style="background-color: #5cb85c; width: {{ ((profile.tasks_done|length / total_tasks) * 100) }}%; -webkit-transition: all 0.7s ease-in-out; transition: all 0.7s ease-in-out;">
                                 <span>Atlikta</span></div>
                         </div>
                         <div class="progress">
                             <div data-effect="slide-left" class="progress-bar progress-bar-danger effect-slide-left"
-                                 style="width: {{ ((profile.tasks_in_progress|length / total_tasks) * 100) }}%; -webkit-transition: all 0.7s ease-in-out; transition: all 0.7s ease-in-out;">
+                                 style="background-color: #f0ad4e; width: {{ ((profile.tasks_in_progress|length / total_tasks) * 100) }}%; -webkit-transition: all 0.7s ease-in-out; transition: all 0.7s ease-in-out;">
                                 <span>Vykdoma</span></div>
                         </div>
                     </div>
