--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -232,6 +232,9 @@
 <script src="{{ asset('js/jquery.jigowatt.js') }}"></script>
 <script src="{{ asset('js/jquery.animate-enhanced.min.js') }}"></script>
 <script src="{{ asset('js/jquery.easypiechart.min.js') }}"></script>
+<script src="{{ asset('js/jquery.easypiechart.min.js') }}"></script>
+<script src="{{ asset('js/gritter/js/jquery.gritter.js') }}"></script>
+<script src="{{ asset('js/gritter/gritter-conf.js') }}"></script>
 <script src="{{ asset('js/custom.js') }}"></script>
 {% block javascripts %}{% endblock %}
 </body>
