--- a/src/SayAndDo/AnalyzisBundle/Resources/views/Default/index.html.twig
+++ b/src/SayAndDo/AnalyzisBundle/Resources/views/Default/index.html.twig
@@ -17,12 +17,10 @@
                 <tbody>
                 {% for document in documents %}
                     <tr>
-                        <td>{{ document.title }}</td>
+                        <td><a href="{{ path("say_and_do_analyzis_homepage.view", {'id' : document.id}) }}">{{ document.title }}</a> </td>
                         <td>
-                            <a class="btn btn-xs btn-primary"
-                               href="{{ path("say_and_do_analyzis_homepage.view", {'id' : document.id}) }}">[view]</a>
                             <a class="btn btn-xs btn-danger"
-                               href="{{ path("say_and_do_analyzis_homepage.remove", {'id' : document.id}) }}">[rm]</a>
+                               href="{{ path("say_and_do_analyzis_homepage.remove", {'id' : document.id}) }}"><i class="fa glyphicon glyphicon-remove"> </i> </a>
                         </td>
                     </tr>
                 {% endfor %}
