--- a/src/SayAndDo/AnalyzisBundle/Resources/views/Default/index.html.twig
+++ b/src/SayAndDo/AnalyzisBundle/Resources/views/Default/index.html.twig
@@ -1,10 +1,6 @@
-{% extends '::fullwidth.html.twig' %}
+{% extends '::admin.html.twig' %}
 
-{% block top_menu %}{% endblock %}
-{% block bottom_menu %}{% endblock %}
-{% block footer %}{% endblock %}
-
-{% block content %}
+{% block inner_content %}
     <div class="row">
         <div class="col-md-offset-1 col-md-10">
             <table class="table table-condensed table-hover">
